src/testData/commands/errors/parent/index.ts
import { defineCommand } from "../../../../index.js";

export default defineCommand({
    key: "parent",
    ownerOnly: true,
    allowDMs: false
});
